fix: Scrollbar changing color (again because DaisyUI)

--- a/src/ClientApp/src/app.scss
+++ b/src/ClientApp/src/app.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-	scrollbar-color: unset;
+	scrollbar-color: unset !important;
 	scroll-behavior: smooth;
 	background-color: #2581C4 !important;
 }
